--- a/docs/dev/ci-reference.adoc
+++ b/docs/dev/ci-reference.adoc
@@ -36,9 +36,9 @@ If you need to run `odo` integration tests against a specific version of Openshi
 
 == Running integration tests on Prow
 
-Prow is the Kubernetes or OpenShift way of managing workflow, including tests. Odo integration and periodic test targets are passed through the script `scripts/openshiftci-presubmit-all-tests.sh` and scripts/openshiftci-periodic-tests.sh respectively available in the odo https://github.com/openshift/odo/tree/master/scripts[repository]. Prow uses the script through the command attribute in the odo job configuration file in https://github.com/openshift/release/tree/master/ci-operator/config/openshift/odo[openshift/release] repository. Reference for the same is available in the repository.
+Prow is the Kubernetes or OpenShift way of managing workflow, including tests. Odo integration and periodic test targets are passed through the script scripts/openshiftci-presubmit-all-tests.sh and scripts/openshiftci-periodic-tests.sh respectively available in the https://github.com/openshift/odo/tree/master/scripts[odo] repository. Prow uses the script through the command attribute of the odo job configuration file in https://github.com/openshift/release/tree/master/ci-operator/config/openshift/odo[openshift/release] repository.
 
-For running integration test on 4.5 cluster, job configuration file will be
+For running integration test on 4.x cluster, job configuration file will be
 [source,sh]
 ----
     tests:
@@ -51,8 +51,22 @@ For running integration test on 4.5 cluster, job configuration file will be
        name: odo-secret
 ----
 
+Similarly for running periodic test on 4.x cluster, job configuration file will be
+[source,sh]
+----
+    tests:
+    - as: integration-e2e
+      commands: scripts/openshiftci-periodic-tests.sh
+      openshift_installer_src:
+       cluster_profile: aws
+      secret:
+       mount_path: /tmp/secret
+       name: odo-secret
+----
+
 To generate the odo job file, run `make jobs` in https://github.com/openshift/release[openshift/release] for the odo pr and periodic tests.
 
 Job dashboard is monitored at:
+
 * link:https://deck-ci.apps.ci.l2s4.p1.openshiftapps.com/?repo=openshift%2Fodo[odo pr jobs dashboard]
-* link:https://deck-ci.apps.ci.l2s4.p1.openshiftapps.com/?type=periodic&job=periodic-\*odo\*[odo periodic jobs dashboard]
+* link:https://deck-ci.apps.ci.l2s4.p1.openshiftapps.com/?type=periodic&job=periodic-\*odo*[odo periodic jobs dashboard]
