--- a/README.adoc
+++ b/README.adoc
@@ -39,6 +39,10 @@ Existing tools such as `oc` are more operations-focused and require a deep-under
 |https://access.redhat.com/containers/#/registry.access.redhat.com/rhscl/nodejs-10-rhel7[rhscl/nodejs-10-rhel7]
 |NPM
 
+|
+|https://access.redhat.com/containers/#/registry.access.redhat.com/rhscl/nodejs-12-rhel7[rhscl/nodejs-12-rhel7]
+|NPM
+
 |*Java*
 |https://access.redhat.com/containers/#/registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift[redhat-openjdk-18/openjdk18-openshift]
 |Maven, Gradle
