--- a/README.adoc
+++ b/README.adoc
@@ -43,6 +43,14 @@ Existing tools such as `oc` are more operations-focused and require a deep-under
 |https://access.redhat.com/containers/#/registry.access.redhat.com/rhscl/nodejs-12-rhel7[rhscl/nodejs-12-rhel7]
 |NPM
 
+|
+|https://github.com/sclorg/s2i-nodejs-container[centos/nodejs-10-centos7]
+|NPM
+
+|
+|https://github.com/sclorg/s2i-nodejs-container[centos/nodejs-12-centos7]
+|NPM
+
 |*Java*
 |https://access.redhat.com/containers/#/registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift[redhat-openjdk-18/openjdk18-openshift]
 |Maven, Gradle
