Update supported images table. Signed-off-by: Yana Hontyk <yhontyk@redhat.com>

--- a/README.adoc
+++ b/README.adoc
@@ -38,12 +38,12 @@ Existing tools such as `oc` are more operations-focused and require a deep-under
 [options="header"]
 |====
 |Node.js|Java
-|`centos/nodejs-8-centos7`|`redhat-openjdk-18/openjdk18-openshift`
-|`rhoar-nodejs/nodejs-8`|`openjdk/openjdk-11-rhel8`
-|`rhoar-nodejs/nodejs-10`|`openjdk/openjdk-11-rhel7`
-|`bucharestgold/centos7-s2i-nodejs`|
-|`rhscl/nodejs-8-rhel7`|
+|`centos/nodejs-10-centos7`|`redhat-openjdk-18/openjdk18-openshift`
+|`centos/nodejs-12-centos7`|`openjdk/openjdk-11-rhel8`
+|`bucharestgold/centos7-s2i-nodejs`| `openjdk/openjdk-11-rhel7`
 |`rhscl/nodejs-10-rhel7`|
+|`rhscl/nodejs-12-rhel7`|
+|`nodeshift/centos7-s2i-nodejs`|
 |====
 
 [id="odo-listing-available-images"]
