Adds documentation on Devfile file reference
**What type of PR is this?**
> Uncomment only one ` /kind` line, and delete the rest.
> For example, `> /kind bug` would simply become: `/kind bug`

> Documentation changes: Please include [skip ci] in your commit message as well
/kind documentation
[skip ci]

**What does does this PR do / why we need it**:

This PR adds documentation regarding each section of Devfile and what we
support / do not support

**Which issue(s) this PR fixes**:

N/A

**How to test changes / Special notes to the reviewer**:

N/A

Signed-off-by: Charlie Drage <charlie@charliedrage.com>

--- a/docs/public/deploying-a-devfile-using-odo.adoc
+++ b/docs/public/deploying-a-devfile-using-odo.adoc
@@ -2,12 +2,11 @@
 
 What is a devfile?
 
-A https://redhat-developer.github.io/devfile/[devfile] is a portable file that describes your development environment. It allows for a _portable_ developmental environment without the need of reconfiguration.
+A https://redhat-developer.github.io/devfile/[devfile] is a portable file that describes your development environment. It allows reproducing a _portable_ developmental environment without the need of reconfiguration.
 
 With a devfile you can describe:
 
-* The source code being used
-* Development components such as IDE tools (VSCode) and application runtimes (Yarn / NPM)
+* Development components such as container definition for build and application runtimes
 * A list of pre-defined commands that can be run
 * Projects to initially clone
 
@@ -394,3 +393,13 @@ You can now continue developing your application. Just run `odo push` and refres
 You can also run `odo watch` to watch changes in the source code. Just refreshing the browser will render the source code changes.
 
 Run `odo delete` to delete the application from cluster.
+
+. To delete your deployed application:
++
+[source,sh]
+----
+   $ odo delete
+   ? Are you sure you want to delete the devfile component: java-spring-boot? Yes
+    ✓  Deleting devfile component java-spring-boot [139ms]
+    ✓  Successfully deleted component
+----
