Update e2e supported images test to support s390x arch.

--- a/README.adoc
+++ b/README.adoc
@@ -32,40 +32,48 @@ Existing tools such as `oc` are more operations-focused and require a deep-under
 === Officially supported languages and corresponding container images
 
 .Supported container images
-[cols=",,",options="header",]
+[cols=",,,",options="header",]
 |===
-|Language |Container Image |Supported Package Manager
+|Language |Container Image |Supported Package Manager |Supported Platform
 |*Node.js*
 |https://access.redhat.com/containers/#/registry.access.redhat.com/rhscl/nodejs-10-rhel7[rhscl/nodejs-10-rhel7]
 |NPM
+|amd64, s390x, ppc64le
 
 |
 |https://access.redhat.com/containers/#/registry.access.redhat.com/rhscl/nodejs-12-rhel7[rhscl/nodejs-12-rhel7]
 |NPM
+|amd64, s390x, ppc64le
 
 |
 |https://access.redhat.com/articles/3376841[rhoar-nodejs/nodejs-10]
 |NPM
+|amd64
 
 |
 |https://github.com/sclorg/s2i-nodejs-container[centos/nodejs-10-centos7]
 |NPM
+|amd64
 
 |
 |https://github.com/sclorg/s2i-nodejs-container[centos/nodejs-12-centos7]
 |NPM
+|amd64
 
 |*Java*
 |https://access.redhat.com/containers/#/registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift[redhat-openjdk-18/openjdk18-openshift]
 |Maven, Gradle
+|amd64, s390x, ppc64le
 
 |
 |https://access.redhat.com/containers/#/registry.access.redhat.com/openjdk/openjdk-11-rhel8[openjdk/openjdk-11-rhel8]
 |Maven, Gradle
+|amd64, s390x, ppc64le
 
 |
 |https://access.redhat.com/containers/#/registry.access.redhat.com/openjdk/openjdk-11-rhel7[openjdk/openjdk-11-rhel7]
 |Maven, Gradle
+|amd64, s390x, ppc64le
 |===
 
 [id="odo-listing-available-images"]
